--- a/src/scss/base/project.scss
+++ b/src/scss/base/project.scss
@@ -1,10 +1,10 @@
 .project__head {
+    z-index: 2;
     display: flex;
     width: 100%;
     height: 50px;
     background: var(--background-highlight);
     box-shadow: -1px -3px 20px 4px $color-highlight;
-
     span {
         padding-top: $gutter / 2;
         text-align: center;
@@ -18,6 +18,7 @@
     .project__head-toggle {
         flex: 1;
         max-width: 90px;
+        min-width: 110px;
     }
 
     .project__head-next {
@@ -35,7 +36,16 @@
     .project__head-title {
         flex: 5;
         width: 100%;
+        overflow: hidden;
         font-size: 1rem;
+        overflow:hidden; 
+        min-width: 0;
+ 
+        h1{
+            text-overflow: ellipsis;
+            overflow: hidden;
+            white-space: nowrap;
+        }
     }
 }
 
@@ -62,7 +72,7 @@ iframe {
         left: 50px;
         z-index: 10;
         width: calc(100vw - 50px);
-        height: 50px;
+        height: 35px;
         color: var(--background-highlight);
 
         & > * {
@@ -121,7 +131,7 @@ iframe {
     width: 25px;
     height: 25px;
     border-radius: 50%;
-    top: 60px;
+    top: 120px;
     transition: 0.4s;
     -webkit-transition: 0.4s;
 }
@@ -229,7 +239,7 @@ input:checked ~ * ~ .label {
 
 .project__content-fulltext {
     padding: $gutter;
-    padding-top: 50px;
+    padding-top: 100px;
 
     div {
         flex-wrap: wrap;
@@ -241,4 +251,27 @@ input:checked ~ * ~ .label {
             padding: $gutter;
         }
     }
+
+    figure{
+        margin: 0 !important;
+        padding: 0 !important;
+        display: inline;
+        cursor: help;
+
+        img {
+            margin: 0 !important;
+            padding: 0 !important;
+            max-width: 25px;
+            max-height: 25px;
+            object-fit: contain;
+        }
+    }
+}
+
+.biggerImg img{
+    min-width: 500px;
+    min-height: 500px;
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
 }
