--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,5 +1,5 @@
 $font-family-mono: "Courier", sans-serif;
-$font-family-serif: "Times", serif;
+$font-family-serif: "Gt Alpina", serif;
 $font-family-sans: "Helvetica", sans-serif;
 
 $font-size-base: 1rem !default;
